# py-titlebar

./: README.md  pyproject.toml
docs/: win32-d2d-api-inventory.md
examples/: basic_window.py
src/nice_titlebar/: __init__.py  _win32_titlebar.c  _win32_titlebar.cp313-win_amd64.pyd  _win32_titlebar.cpp  _win32_titlebar.pxd  _win32_titlebar.pyx  api.py  types.py
src/nice_titlebar.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: manual_show_window.py  test_basic_window.py
